[project]
name = "personal-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "llama-index>=0.12.52",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-readers-google>=0.6.2.post1",
    "python-dotenv>=1.1.1",
]
